templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
            - path: /process
              pathType: Prefix
              backend:
                service:
                  name: orders
                  port:
                    number: 5155
            - path: /auth
              pathType: Prefix
              backend:
                service:
                  name: auth
                  port:
                    number: 5156
